@@ -23,7 +23,6 @@ t/htdocs/test.css
 t/htdocs/test.txt
 t/htdocs/minified.txt
 t/htdocs/minified-xs.txt
-t/MY/slurp.pm
 t/MY/CharsetHandler.pm
 t/MY/CSSHandler.pm
 t/MY/NoCTypeHandler.pm
