@@ -4,7 +4,7 @@ use Apache::Test;
 use Apache::TestRequest;
 use Apache::TestUtil qw(t_cmp);
 use lib 't';
-use MY::slurp;
+use File::Slurp qw(slurp);
 
 # Test dynamically generated content
 plan tests => 2, need_lwp;
@@ -21,5 +21,6 @@ dynamic_minified: {
     my $body = GET_BODY '/dynamic/css';
     my $min  = slurp( 't/htdocs/minified.txt' );
     chomp($min);
+
     ok( t_cmp($body, $min) );
 }
