@@ -1,5 +1,8 @@
 Revision history for Perl extension Apache2::Filter::Minifier::CSS.
 
+???
+    - Use File::Slurp, instead of a home-grown version
+
 1.06    Fri Nov  7 17:07 PST 2014
     - Update tests to work with Apache-2.4.x series
 
